--- a/Strings/AppResources.he.resx
+++ b/Strings/AppResources.he.resx
@@ -186,68 +186,68 @@
     <comment>Live Data (All Servers)</comment>
   </data>
   <data name="Error.AccountAlreadyInUse" xml:space="preserve">
-    <value>The account you are trying to connect is already linked with another Infinite Flight Pro subscription (error code {0})</value>
-    <comment>The account you are trying to connect is already linked with another Infinite Flight Pro subscription (error code {0})</comment>
+    <value>The account you are trying to connect is already linked with another Infinite Flight Pro subscription</value>
+    <comment>The account you are trying to connect is already linked with another Infinite Flight Pro subscription</comment>
   </data>
   <data name="Error.AccountSuspended" xml:space="preserve">
-    <value>Your account has been suspended (error code {0})</value>
-    <comment>Your account has been suspended (error code {0})</comment>
+    <value>Your account has been suspended</value>
+    <comment>Your account has been suspended</comment>
   </data>
   <data name="Error.ATCSessionNotFound" xml:space="preserve">
-    <value>We can't find information about this ATC session (error code {0})</value>
-    <comment>We can't find information about this ATC session (error code {0})</comment>
+    <value>We can't find information about this ATC session</value>
+    <comment>We can't find information about this ATC session</comment>
   </data>
   <data name="Error.AuthProviderFailure" xml:space="preserve">
-    <value>There was an error validating this account with the provider (error code {0})</value>
-    <comment>There was an error validating this account with the provider (error code {0})</comment>
+    <value>There was an error validating this account with the provider</value>
+    <comment>There was an error validating this account with the provider</comment>
   </data>
   <data name="Error.DataNotLoaded" xml:space="preserve">
-    <value>Infinite Flight can't connect to the server (error code {0})</value>
-    <comment>Infinite Flight can't connect to the server (error code {0})</comment>
+    <value>Infinite Flight can't connect to the server</value>
+    <comment>Infinite Flight can't connect to the server</comment>
   </data>
   <data name="Error.EndpointError" xml:space="preserve">
-    <value>There was an error on the Infinite Flight servers. Try again shortly (error code {0})</value>
-    <comment>There was an error on the Infinite Flight servers. Try again shortly (error code {0})</comment>
+    <value>There was an error on the Infinite Flight servers. Try again shortly</value>
+    <comment>There was an error on the Infinite Flight servers. Try again shortly</comment>
   </data>
   <data name="Error.EndpointNotAuthorized" xml:space="preserve">
-    <value>Your account isn't allowed to carry out this action, please contact support (error code {0})</value>
-    <comment>Your account isn't allowed to carry out this action, please contact support (error code {0})</comment>
+    <value>Your account isn't allowed to carry out this action, please contact support</value>
+    <comment>Your account isn't allowed to carry out this action, please contact support</comment>
   </data>
   <data name="Error.EndpointTimeout" xml:space="preserve">
-    <value>Our servers are having trouble processing this, try again shortly (error code {0})</value>
-    <comment>Our servers are having trouble processing this, try again shortly (error code {0})</comment>
+    <value>Our servers are having trouble processing this, try again shortly</value>
+    <comment>Our servers are having trouble processing this, try again shortly</comment>
   </data>
   <data name="Error.Error" xml:space="preserve">
     <value>Error</value>
     <comment>Error (title text)</comment>
   </data>
   <data name="Error.GenericServerConnection" xml:space="preserve">
-    <value>Infinite Flight is having trouble connecting to the server (error code {0})</value>
-    <comment>Infinite Flight is having trouble connecting to the server (error code {0})</comment>
+    <value>Infinite Flight is having trouble connecting to the server</value>
+    <comment>Infinite Flight is having trouble connecting to the server</comment>
   </data>
   <data name="Error.InvalidInput" xml:space="preserve">
-    <value>The value you are updating isn't valid (error code {0})</value>
-    <comment>The value you are updating isn't valid (error code {0})</comment>
+    <value>The value you are updating isn't valid</value>
+    <comment>The value you are updating isn't valid</comment>
   </data>
   <data name="Error.InvalidToken" xml:space="preserve">
-    <value>The account you are trying to login to has invalid credentials (error code {0})</value>
-    <comment>The account you are trying to login to has invalid credentials (error code {0})</comment>
+    <value>The account you are trying to login to has invalid credentials</value>
+    <comment>The account you are trying to login to has invalid credentials</comment>
   </data>
   <data name="Error.MissingRequestParameters" xml:space="preserve">
-    <value>There was a problem connecting to the server (error code {0})</value>
-    <comment>There was a problem connecting to the server (error code {0})</comment>
+    <value>There was a problem connecting to the server</value>
+    <comment>There was a problem connecting to the server</comment>
   </data>
   <data name="Error.NetworkError" xml:space="preserve">
-    <value>Infinite Flight can't connect to the server (error code {0})</value>
-    <comment>Infinite Flight can't connect to the server (error code {0})</comment>
+    <value>Infinite Flight can't connect to the server</value>
+    <comment>Infinite Flight can't connect to the server</comment>
   </data>
   <data name="Error.TileSystemDiskFull" xml:space="preserve">
     <value>הזרמת השרת העולמי נכשלה מכיוון שאחסון המכשיר שלך מלא</value>
     <comment>Global Server streaming has failed because your device storage is full</comment>
   </data>
   <data name="Error.UserNotFound" xml:space="preserve">
-    <value>This account isn't linked to an Infinite Flight Pro subscription (error code {0})</value>
-    <comment>This account isn't linked to an Infinite Flight Pro subscription (error code {0})</comment>
+    <value>This account isn't linked to an Infinite Flight Pro subscription</value>
+    <comment>This account isn't linked to an Infinite Flight Pro subscription</comment>
   </data>
   <data name="Global.CarryYourPassion" xml:space="preserve">
     <value>תשא את התשוקה שלך</value>
@@ -2552,27 +2552,27 @@ Slow down to avoid further violations.</comment>
     <comment>No jet bridges available at this airport</comment>
   </data>
   <data name="Error.AgreementNotSigned" xml:space="preserve">
-    <value>An agreement has not been signed; you must sign the agreement to perform this action (error code {0})</value>
+    <value>An agreement has not been signed; you must sign the agreement to perform this action</value>
     <comment>An agreement has not been signed; you must sign the agreement to perform this action (Used in the case of a Contributor License Agreement)</comment>
   </data>
   <data name="Error.AirportNotFound" xml:space="preserve">
-    <value>The selected airport is not available (error code {0})</value>
+    <value>The selected airport is not available</value>
     <comment>The selected airport is not available</comment>
   </data>
   <data name="Error.ExpiredToken" xml:space="preserve">
-    <value>You have been logged out and need to log in again manually (error code {0})</value>
+    <value>You have been logged out and need to log in again manually</value>
     <comment>You have been logged out and need to log in again manually</comment>
   </data>
   <data name="Error.NotSupported" xml:space="preserve">
-    <value>This feature is not supported (error code {0})</value>
+    <value>This feature is not supported</value>
     <comment>This feature is not supported</comment>
   </data>
   <data name="Error.ServerNotFound" xml:space="preserve">
-    <value>The selected server is not available (error code {0})</value>
+    <value>The selected server is not available</value>
     <comment>The selected server is not available</comment>
   </data>
   <data name="Error.UserNotAssigned" xml:space="preserve">
-    <value>You are not assigned to this airport. Please contact a reviewer or moderator (error code {0})</value>
+    <value>You are not assigned to this airport. Please contact a reviewer or moderator</value>
     <comment>You are not assigned to this airport</comment>
   </data>
   <data name="SceneryEditor.NoUploadPermissions" xml:space="preserve">
