--- a/Strings/AppResources.pt.resx
+++ b/Strings/AppResources.pt.resx
@@ -400,52 +400,52 @@
     <value>Diminuir Zoom</value>
   </data>
   <data name="Error.AccountAlreadyInUse" xml:space="preserve">
-    <value>A conta que você está tentando conectar já está ligado a outra assinatura do Infinite Flight Pro (erro {0})</value>
+    <value>A conta que você está tentando conectar já está ligado a outra assinatura do Infinite Flight Pro</value>
   </data>
   <data name="Error.AccountSuspended" xml:space="preserve">
-    <value>Sua conta foi suspensa (erro {0})</value>
+    <value>Sua conta foi suspensa</value>
   </data>
   <data name="Error.ATCSessionNotFound" xml:space="preserve">
-    <value>Não foi encontrado informação sobre essa sessão ATC (erro {0})</value>
+    <value>Não foi encontrado informação sobre essa sessão ATC</value>
   </data>
   <data name="Error.AuthProviderFailure" xml:space="preserve">
-    <value>Ocorreu um erro ao validar essa conta com o provedor de autenticação (erro {0})</value>
+    <value>Ocorreu um erro ao validar essa conta com o provedor de autenticação</value>
   </data>
   <data name="Error.DataNotLoaded" xml:space="preserve">
-    <value>Infinite Flight não conseguiu conectar com o servidor (erro {0})</value>
+    <value>Infinite Flight não conseguiu conectar com o servidor</value>
   </data>
   <data name="Error.EndpointError" xml:space="preserve">
-    <value>Ocorreu um erro com os servidores do Infinite Flight. Tente novamente mais tarde (erro {0})</value>
+    <value>Ocorreu um erro com os servidores do Infinite Flight. Tente novamente mais tarde</value>
   </data>
   <data name="Error.EndpointNotAuthorized" xml:space="preserve">
-    <value>Sua conta não tem permissão para realizar essa ação. Por favor contate o suporte (erro {0})</value>
+    <value>Sua conta não tem permissão para realizar essa ação. Por favor contate o suporte</value>
   </data>
   <data name="Error.EndpointTimeout" xml:space="preserve">
-    <value>Nossos servidores estão tendo problemas para processar isso, tente novamente mais tarde (erro {0})</value>
+    <value>Nossos servidores estão tendo problemas para processar isso, tente novamente mais tarde</value>
   </data>
   <data name="Error.Error" xml:space="preserve">
     <value>Erro</value>
   </data>
   <data name="Error.GenericServerConnection" xml:space="preserve">
-    <value>Infinite Flight não pode conectar ao servidor (erro {0})</value>
+    <value>Infinite Flight não pode conectar ao servidor</value>
   </data>
   <data name="Error.InvalidInput" xml:space="preserve">
-    <value>Esse valor não é válido (erro {0})</value>
+    <value>Esse valor não é válido</value>
   </data>
   <data name="Error.InvalidToken" xml:space="preserve">
-    <value>A conta que você está tentando entrar tem credenciais inválidas (erro {0})</value>
+    <value>A conta que você está tentando entrar tem credenciais inválidas</value>
   </data>
   <data name="Error.MissingRequestParameters" xml:space="preserve">
-    <value>Infinite Flight não pode conectar ao servidor (erro {0})</value>
+    <value>Infinite Flight não pode conectar ao servidor</value>
   </data>
   <data name="Error.NetworkError" xml:space="preserve">
-    <value>Infinite Flight não conseguiu conectar com o servidor (erro {0})</value>
+    <value>Infinite Flight não conseguiu conectar com o servidor</value>
   </data>
   <data name="Error.TileSystemDiskFull" xml:space="preserve">
     <value>A conexão com o servidor falhou porque o armazenamento está cheio</value>
   </data>
   <data name="Error.UserNotFound" xml:space="preserve">
-    <value>Essa conta não está ligada a uma assinatura Infinite Flight Pro (erro {0})</value>
+    <value>Essa conta não está ligada a uma assinatura Infinite Flight Pro</value>
   </data>
   <data name="FlightPlan.AddToCurrentFlightPlanPrompt" xml:space="preserve">
     <value>Adicionar ao plano de voo atual?</value>
@@ -1938,22 +1938,22 @@ Reduza para evitar mais violações.</value>
     <value>Ative o Freio de Estacionamento no pátio para realizar mudanças no peso e balanceamento no modo online.</value>
   </data>
   <data name="Error.AgreementNotSigned" xml:space="preserve">
-    <value>Um contrato não foi assinado; você deve assinar o contrato para realizar esta ação (error code {0})</value>
+    <value>Um contrato não foi assinado; você deve assinar o contrato para realizar esta ação</value>
   </data>
   <data name="Error.AirportNotFound" xml:space="preserve">
-    <value>O aeroporto selecionado não está disponível (error code {0})</value>
+    <value>O aeroporto selecionado não está disponível</value>
   </data>
   <data name="Error.ExpiredToken" xml:space="preserve">
-    <value>Você foi deslogado e será necessário realizar o login novamente (error code {0})</value>
+    <value>Você foi deslogado e será necessário realizar o login novamente</value>
   </data>
   <data name="Error.NotSupported" xml:space="preserve">
-    <value>Esse recurso não é suportado (error code {0})</value>
+    <value>Esse recurso não é suportado</value>
   </data>
   <data name="Error.ServerNotFound" xml:space="preserve">
-    <value>O servidor selecionado não está disponível (error code {0})</value>
+    <value>O servidor selecionado não está disponível</value>
   </data>
   <data name="Error.UserNotAssigned" xml:space="preserve">
-    <value>Você não foi atribuído a este aeroporto. Por favor contate um revisor ou moderador (error code {0})</value>
+    <value>Você não foi atribuído a este aeroporto. Por favor contate um revisor ou moderador</value>
   </data>
   <data name="MapItemInfoControl.Contributor" xml:space="preserve">
     <value>Contribuidor</value>
@@ -2379,7 +2379,7 @@ Você poderá sair nesta sessão ou embarcar em mais uma jornada para outro dest
 Você pode cancelar a qualquer momento no Centro de Assinaturas do Google Play.</value>
   </data>
   <data name="Error.LoadingScenarioError" xml:space="preserve">
-    <value>Ocorreu um erro ao baixar este cenário (error code {0})</value>
+    <value>Ocorreu um erro ao baixar este cenário</value>
   </data>
   <data name="NavigationControl.Leaderboards" xml:space="preserve">
     <value>Classificação</value>
